# libmongocrypt-rust

./: .gitignore  README.md  RELEASING.md  publish.sh
.evergreen/: check-semgrep.sh  compile-only.sh  config.yml  configure-rust.sh  install-dependencies.sh  run-tests.sh  run-valgrind.sh  sign-release.sh  valgrind-suppressions.supp
.github/: dependabot.yml
mongocrypt/: Cargo.toml  sbom.json
mongocrypt-sys/: .gitignore  Cargo.toml  bindgen.sh  build.rs  sbom.json
mongocrypt-sys/etc/: bindgen.sh
mongocrypt-sys/src/: bindings.rs  lib.rs  test.rs
mongocrypt-sys/src/test/: example_state_machine.rs
mongocrypt/src/: binary.rs  convert.rs  ctx.rs  error.rs  hooks.rs  lib.rs  native.rs  test.rs
mongocrypt/src/test/: binary.rs  error.rs  example_state_machine.rs
