[package]
name = "mongocrypt"
description = "Rust-idiomatic wrapper around mongocrypt-sys"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
authors = [
     "Abraham Egnor <abraham.egnor@mongodb.com>",
]
keywords = ["mongo", "mongodb", "database", "mongocrypt", "libmongocrypt"]
categories = ["database", "cryptography", "api-bindings"]
repository = "https://github.com/mongodb/libmongocrypt-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
compile_fail = []

[dependencies]
mongocrypt-sys = { path = "../mongocrypt-sys" }
bson = { git = "https://github.com/mongodb/bson-rust", branch = "main" }
serde = "1.0.125"
once_cell = "1.17.0"

[dev-dependencies]
serde_json = "1.0.81"
