[package]
name = "mongocrypt"
description = "Rust-idiomatic wrapper around mongocrypt-sys"
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
authors = [
     "Abraham Egnor <abraham.egnor@mongodb.com>",
     "Isabel Atkinson <isabel.atkinson@mongodb.com>",
]
keywords = ["mongo", "mongodb", "database", "mongocrypt", "libmongocrypt"]
categories = ["database", "cryptography", "api-bindings"]
repository = "https://github.com/mongodb/libmongocrypt-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bson-2"]
compile_fail = []

[dependencies]
mongocrypt-sys = { path = "../mongocrypt-sys", version = "0.1.5" }
bson-2 = { git = "https://github.com/mongodb/bson-rust", branch = "2.15.x", package = "bson", version = "2.15.0", optional = true }
bson-3 = { git = "https://github.com/mongodb/bson-rust", branch = "main", package = "bson", version = "3.0.0", optional = true }
serde = "1.0.125"
once_cell = "1.17.0"

[dev-dependencies]
bson-3 = { git = "https://github.com/mongodb/bson-rust", branch = "main", package = "bson", version = "3.0.0", features = ["serde_json-1", "serde"] }
serde_json = "1.0.81"
